# RAIDER

./: README.md
matlab_files/: Raider_walk.slx  moveForward.m  moveShoulderSwing.m  moveVertical.m  setTargetPosition.m  updateCurrentPosition.m
matlab_simulink_control/: Raider_test.slx  moveForward.m  moveShoulderSwing.m  moveVertical.m
robot_simulation/gazebo_ros_pkgs/gazebo_ros_control/: CMakeLists.txt~  robot_hw_sim_plugins.xml~
robot_simulation/raider_control/: CMakeLists.txt  package.xml~
robot_simulation/raider_control/config/: raider_control.yaml~
robot_simulation/raider_control/launch/: raider_control.launch~  raider_rqt.launch  raider_rqt.perspective
robot_simulation/raider_description/: model.config~  package.xml
robot_simulation/raider_description/launch/: raider_rviz.launch  raider_rviz.launch~  test_rviz.launch~
robot_simulation/raider_description/meshes/: Head.dae  Head.stl  Left_foot.stl  Left_foot_servos.stl  Left_forearm.dae~  Left_hand.dae  Left_hand.dae~  Left_knee_servos.stl  Left_leg_bracket.dae  Left_lower_leg.dae~  Left_shoulder.dae  Left_shoulder.dae~  Left_shoulder.stl  Left_upper_leg.dae~  Left_upper_leg.stl  Lifecam.dae~  Right_foot_servos.stl  Right_forearm.dae  Right_forearm.dae~  Right_hand.stl  (+6 more)
robot_simulation/raider_gazebo/: package.xml~  raider.world~
simulation/raider_control/: CMakeLists.txt~  package.xml
simulation/raider_control/config/: raider_control.yaml
simulation/raider_description/: CMakeLists.txt  CMakeLists.txt~  package.xml~  test.urdf~
simulation/raider_gazebo/: CMakeLists.txt~  package.xml
(+90 files in other folders)
